Fix restart crash due to JMPS
- Open java.nio to RocketMQ